<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:orientation="vertical"
    tools:context=".Principal">

   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/mi_titulo"
       android:gravity="center_horizontal"
       android:textSize="20sp"
       android:textStyle="bold"
       android:layout_marginTop="5dp"
       android:layout_marginBottom="5dp"
       />


   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/titulo_serial"
       android:gravity="start"
       android:textSize="18sp"
       android:textStyle="bold"
       android:layout_marginTop="5dp"
       android:layout_marginBottom="5dp"
       />

   <EditText
       android:id="@+id/editSerial"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="5dp"
       android:layout_marginBottom="5dp"
       android:gravity="start"
       android:hint="@string/hint_serial"
       android:textSize="18sp"
       android:inputType="text" />



   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/titulo_serial"
       android:gravity="start"
       android:textSize="18sp"
       android:textStyle="bold"
       android:layout_marginTop="5dp"
       android:layout_marginBottom="5dp"
       />

   <EditText
       android:id="@+id/editHostname"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="5dp"
       android:layout_marginBottom="5dp"
       android:gravity="start"
       android:hint="@string/hint_hostname"
       android:textSize="18sp"
       android:inputType="text" />



   <Button
       android:id="@+id/btnActivar"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal"
       android:text="@string/titulo_btn_activar"
       android:textAllCaps="false"
    />





</LinearLayout>