<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    tools:context=".ProductosVista">

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="wrap_content">


       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/mi_titulo"
               android:gravity="center_horizontal"
               android:textSize="20sp"
               android:textStyle="bold"
               android:layout_marginTop="5dp"
               android:layout_marginBottom="5dp"
               />

           <TextView
               android:id="@+id/txtLicencia"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="5dp"
               android:layout_marginBottom="5dp"
               android:gravity="center_horizontal"
               android:text="@string/licencia_dummy_primos"
               android:textColor="@color/purple_500"
               android:textSize="20sp"
               android:textStyle="bold" />

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal"
               android:gravity="center_horizontal"
               android:orientation="horizontal">

               <Button
                   android:id="@+id/btnMostrar"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal"
                   android:text="@string/texto_btn_mostrar_productos"
                   android:textAllCaps="false"
                   android:layout_marginStart="7dp"
                   android:layout_marginEnd="7dp"
                   />

               <Button
                   android:id="@+id/btnQuitar"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal"
                   android:text="@string/texto_btn_quitar_licencia"
                   android:textAllCaps="false"
                   android:layout_marginStart="7dp"
                   android:layout_marginEnd="7dp"
                   />


           </LinearLayout>

           <TextView
               android:id="@+id/txtTituloListado"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="5dp"
               android:layout_marginBottom="5dp"
               android:gravity="center_horizontal"
               android:text="@string/titulo_listado"
               android:textColor="@color/design_default_color_primary_variant"
               android:textSize="20sp"
               android:visibility="gone"
               android:textStyle="bold" />


       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_gravity="center_horizontal"
           android:gravity="center_horizontal"
           android:orientation="vertical">


           <TableLayout
               android:id="@+id/tablaProductos"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_marginLeft="2dp"
               android:layout_marginRight="2dp"
               android:orientation="vertical"
               >
           </TableLayout>



       </LinearLayout>




       </LinearLayout>

   </ScrollView>


</LinearLayout>